# automata

./: README.md  automata.cabal  package.yaml  stack.yaml  text
app/: Main.hs
src/: Combinators.hs  Example.hs  FSA.hs  FSM.hs  FST.hs  Recurse.hs  Regex.hs  Relation.hs  Types.hs
test/: Spec.hs
