name:                automata
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/leohaskell/automata#readme
license:             MIT
license-file:        LICENSE
author:              Daniel Taskoff
maintainer:          daniel.taskoff@gmail.com
copyright:           2018 Daniel Taskoff
category:            Automata
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable automata
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
